[project]
name = "boxturner"
version = "0.1.0"
description = ""
authors = [{ name = "Yinan Wang", email = "yinanwang@sierra.one" }]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "zmq (>=0.0.0,<0.0.1)",
    "gpiozero (>=2.0.1,<3.0.0)",
    "pigpio (>=1.78,<2.0)",
    "aiomqtt (>=2.5.0,<3.0.0)",
]

[tool.poetry]
packages = [{ include = "boxturner", from = "src" }]

[tool.poetry.scripts]
boxturner-gpio = "boxturner.gpio:main"
boxturner-pusher = "boxturner.pusher:main"
boxturner-sealer = "boxturner.sealer:main"
boxturner-main = "boxturner.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
